# test_ros

./: .gitignore
src/Azure_Kinect_ROS_Driver/: CMakeLists.txt
src/Azure_Kinect_ROS_Driver/launch/: driver.launch
src/Azure_Kinect_ROS_Driver/src/: ball_detection.cpp  ball_detection.h  shelf-pack.hpp  test_bridge.cpp  test_detection.cpp
src/real_sense/: CMakeLists.txt  package.xml  pcl_ros.cc  realsense_support.h  realsense_test.cc  ros_realsense_test.cc
